tests/negative/test_for_init_block.orb
fnc main() {
    for ({}; false; 0) {}
}